# RFID_READ_WRITE

./: .gitignore  COMPARISON.md  GITHUB_SETUP.md  IMPLEMENTATION_GUIDE.md  INSTALLATION.md  LIBNFC_SETUP.md  LIBNFC_USAGE.md  NTAG216_DOKUMENTACIO.md  NTAG216_OSSZEFOGLALO.md  OSSZEFOGLALO.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build-windows.yml  build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/nfc/: card_trait.rs  mod.rs  ntag216.rs  reader.rs  reader_libnfc.rs
