[package]
name = "nfc-rust"
version = "0.1.0"
description = "NTAG216 NFC alkalmazás"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pcsc = { version = "2.9", optional = true }
anyhow = "1.0"
libc = "0.2"

[features]
default = ["pcsc"]
pcsc = ["dep:pcsc"]
libnfc = []
custom-protocol = ["tauri/custom-protocol"]
